# comp2121

./: .gitignore  README.md  flake.nix  justfile  pyproject.toml
src/: ensemble_model.py  extract_features.py  pipeline.ipynb  prepare_data.py  tune_model.py
